syntax = "proto3";


message Cinema {
  string id = 1;
  string name = 2;
  string provider = 3;
  string address = 4;
  string territory = 5;
  string district = 6;
}

message Movie {
  string id = 1;
  string name = 2;
}

message MovieTimeslot {
  string start = 1;
  float price = 2;
  string house = 3;
  string cinema_id = 4;
  string cinema_name = 5;
  string provider = 6;
  string movie_name = 7;
}

message MovieDetail {
  string id = 1;
  string name = 2;
  string provider = 3;
  int32 duration = 4;
  string rate = 5;
  string language = 6;
  string description = 7;
}

service ControlPlane {
  rpc getAvailableMovieList (GetAvailableMovieListRequest) returns (GetAvailableMovieListResponse) {}
  rpc getMovieDetail (GetMovieDetailsRequest) returns (MovieDetail) {}
  rpc getCinemaList (GetCinemaListRequest) returns (GetCinemaListResponse) {}
  rpc getMovieTimeslots (GetMovieTimeslotsRequest) returns (GetMovieTimeslotsResponse) {}
}

service EnquiryBot {
  rpc getAvailableMovieList (GetAvailableMovieListRequest) returns (GetAvailableMovieListResponse) {}
  rpc getMovieDetail (GetMovieDetailsRequest) returns (MovieDetail) {}
  rpc getCinemaList (GetCinemaListRequest) returns (GetCinemaListResponse) {}
  rpc getMovieTimeslots (GetMovieTimeslotsRequest) returns (GetMovieTimeslotsResponse) {}
}

message GetAvailableMovieListRequest {
  optional string cinema_id = 1;
  optional string cinema_provider = 2;
}

message GetAvailableMovieListResponse {
  repeated Movie movie_list = 1;
}

message GetMovieDetailsRequest {
  string movie_name = 1;
}

message GetCinemaListRequest {}

message GetCinemaListResponse {
  repeated Cinema cinema_list = 1;
}

message GetMovieTimeslotsRequest {
  string movie_name = 1;
  float price_lte = 2;
  float price_gte = 3;
  string time_lte = 4;
  string time_gte = 5;
  string district = 6;
}

message GetMovieTimeslotsResponse {
  repeated MovieTimeslot movie_timeslots = 1;
}
